2011-09-20  Roland Grunberg  <rgrunber@redhat.com>

	* src/org/eclipse/linuxtools/oprofile/core/opxml/info/InfoAdapter.java:
	* src/org/eclipse/linuxtools/oprofile/core/opxml/info/EventListProcessor.java:
		Do not create an element for the event id.
	* src/org/eclipse/linuxtools/oprofile/core/opxml/checkevent/CheckEventsProcessor.java:
		Remove the invalid event error.
	* src/org/eclipse/linuxtools/oprofile/core/opxml/checkevent/CheckEventAdapter.java:
		Remove any methods related to the event id and instead use the
		event name to refer to an event.
	* src/org/eclipse/linuxtools/oprofile/core/opxml/EventIdCache.java:
		Remove any methods related to the event id but instead add a
		method to map the event name to it's corresponding info node.
	* src/org/eclipse/linuxtools/oprofile/core/daemon/OpEvent.java:
		Remove event id related methods/fields.
	* src/org/eclipse/linuxtools/oprofile/core/linux/LinuxOpxmlProvider.java
	* src/org/eclipse/linuxtools/oprofile/core/Oprofile.java
	* src/org/eclipse/linuxtools/oprofile/core/IOpxmlProvider.java
		(checkEvents): Change event argument from int to String.

2011-09-02  Roland Grunberg  <rgrunber@redhat.com>

	* src/org/eclipse/linuxtools/oprofile/core/opxml/modeldata/ModelDataAdapter.java:
		(createXML): Add support for displaying statistics of library calls.

2011-08-30  Roland Grunberg  <rgrunber@redhat.com>

	* src/org/eclipse/linuxtools/oprofile/core/opxml/info/InfoAdapter.java:
		Implement timer-mode support.
		(InfoAdapter): Check for timer-mode before running ophelp.
		(createDOM): Minor change to support creating a DOM without ophelp XML.
		(process): Don't attempt to find events if we are in timer-mode.
		(checkTimerSupport): New Method - Actual check for timer support
		(hasTimerSupport): Cached check for timer support.
	* src/org/eclipse/linuxtools/oprofile/core/linux/OpxmlRunner.java
		(handleModelData): Determine what flags to give ophelp depending on whether
		we are in timer-mode.