@@ -4,12 +4,10 @@ bin.includes = META-INF/,\
                about.html,\
                README,\
                natives/,\
-               schema/,\
                op_error_key
 src.includes = README,\
                about.html,\
-               natives/,\
-               schema/
+               natives/
 jars.compile.order = oprofile-core.jar
 source.oprofile-core.jar = src/
 output.oprofile-core.jar = bin/
