@@ -1,3 +1,10 @@
+2011-09-21  Roland Grunberg  <rgrunber@redhat.com>
+
+	* src/org/eclipse/linuxtools/oprofile/ui/view/OprofileViewLogReaderAction.java:
+		Use empty String literal rather than allocating an empty String.
+		Close reader to avoid leaking file descriptor.
+	* src/org/eclipse/linuxtools/oprofile/ui/view/OprofileViewDoubleClickListener.java:
+		Use an EntrySet in for loops rather than the key and a reference to the Map.
 2011-02-11  Severin Gehwolf  <sgehwolf@redhat.com>
 
 	* META-INF/MANIFEST.MF:  Bump version to 0.3.1.
