@@ -1,3 +1,7 @@
+2011-09-21  Roland Grunberg  <rgrunber@redhat.com>
+
+	* build.properties: Remove non-existant schema folder.
+
 2011-09-20  Roland Grunberg  <rgrunber@redhat.com>
 
 	* src/org/eclipse/linuxtools/oprofile/core/opxml/info/InfoAdapter.java:
